--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: var(--color-grey-900);
+  background: #141414;
   background-size: cover;
   background-position: center;
   z-index: -2;
